// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Referentiels/ActionDiscussions/ActionDiscussionsPanel Vue Fermes 1`] = `
<div
  className="absolute right-0"
>
  <div
    className="hidden lg:block absolute top-6 right-6 border border-gray-200"
    data-test="ActionDiscussionsButton"
  >
    <button
      className="p-2 text-bf500 fr-fi-chat-quote-line"
      onClick={[Function]}
    />
  </div>
  <div
    className="border-l w-full max-w-md border-l-gray-200 hidden"
    data-test="ActionDiscussionsPanel"
  >
    <div
      className="p-6 pb-4 border-b border-gray-200"
    >
      <button
        className="p-2 text-gray-400 fr-fi-arrow-right-s-line-double hover:bg-gray-50"
        onClick={[Function]}
      />
      <div
        className="flex items-center mt-6"
      >
        <div
          className="flex items-center py-1 px-3 text-sm text-white bg-bf500 rounded-full"
        >
          <span
            className="w-3 h-3 mr-2 bg-yellow-400"
          />
          Commentaires
        </div>
        <div
          className="ml-auto border border-gray-200"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          toggleOpen={[Function]}
        >
          <button
            className="w-24 flex items-center justify-between py-0.5 pl-2 pr-1 text-sm capitalize hover:bg-gray-100"
            data-test="ActionDiscussionsChangeVue"
          >
            Fermés
             
            <div
              className="fr-fi-arrow-down-s-line mt-0.5 ml-1 scale-90"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="py-3 px-4 bg-gray-100"
      data-test="ActionDiscussionsNouvelleDiscussion"
    >
      <textarea
        className="w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 bg-white"
        onChange={[Function]}
        placeholder="Écrire un nouveau commentaire..."
        value=""
      />
    </div>
    <div
      data-test="ActionDiscussionsFeed"
    >
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Bonjour le monde, ceci est un message.
                </div>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Rouvrir
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Ces discussions sont fermés
                </div>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Rouvrir
                  </button>
                </div>
              </div>
            </div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Effectivement
                </div>
              </div>
              <div
                className="flex items-center"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Referentiels/ActionDiscussions/ActionDiscussionsPanel Vue Ouverts 1`] = `
<div
  className="absolute right-0"
>
  <div
    className="hidden lg:block absolute top-6 right-6 border border-gray-200"
    data-test="ActionDiscussionsButton"
  >
    <button
      className="p-2 text-bf500 fr-fi-chat-quote-line"
      onClick={[Function]}
    />
  </div>
  <div
    className="border-l w-full max-w-md border-l-gray-200 hidden"
    data-test="ActionDiscussionsPanel"
  >
    <div
      className="p-6 pb-4 border-b border-gray-200"
    >
      <button
        className="p-2 text-gray-400 fr-fi-arrow-right-s-line-double hover:bg-gray-50"
        onClick={[Function]}
      />
      <div
        className="flex items-center mt-6"
      >
        <div
          className="flex items-center py-1 px-3 text-sm text-white bg-bf500 rounded-full"
        >
          <span
            className="w-3 h-3 mr-2 bg-yellow-400"
          />
          Commentaires
        </div>
        <div
          className="ml-auto border border-gray-200"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          toggleOpen={[Function]}
        >
          <button
            className="w-24 flex items-center justify-between py-0.5 pl-2 pr-1 text-sm capitalize hover:bg-gray-100"
            data-test="ActionDiscussionsChangeVue"
          >
            Ouverts
             
            <div
              className="fr-fi-arrow-down-s-line mt-0.5 ml-1 scale-90"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="py-3 px-4 bg-gray-100"
      data-test="ActionDiscussionsNouvelleDiscussion"
    >
      <textarea
        className="w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 bg-white"
        onChange={[Function]}
        placeholder="Écrire un nouveau commentaire..."
        value=""
      />
    </div>
    <div
      data-test="ActionDiscussionsFeed"
    >
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Bonjour le monde, ceci est un message.
                </div>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Fermer
                  </button>
                </div>
              </div>
            </div>
          </div>
          <textarea
            className="w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 resize-none"
            onChange={[Function]}
            placeholder="Répondre..."
            value=""
          />
        </div>
      </div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Une autre discussion
                </div>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Fermer
                  </button>
                </div>
              </div>
            </div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <div
                  className="text-sm whitespace-pre-wrap"
                >
                  Avec plusieurs commentaires!
                </div>
              </div>
              <div
                className="flex items-center"
              />
            </div>
          </div>
          <textarea
            className="w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 resize-none"
            onChange={[Function]}
            placeholder="Répondre..."
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
